- Git wanted me to apply changes with a different command :S